integrate PostgreSQL with Docker deployment and Payara Micro